--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
   "license": "Apache-2.0",
   "scripts": {
     "clear": "rm -rf node_modules/",
-    "flow:install": "flow-typed install",
     "lint": "flow && eslint .eslintrc app/javascript spec/javascripts",
     "test": "karma start --single-run",
     "jest": "jest",
-    "jest:watch": "npm run-script jest -- --watch"
+    "jest:watch": "npm run-script jest -- --watch",
+    "postshrinkwrap": "replace --silent 'http://' 'https://' ./package-lock.json",
+    "postinstall": "npm rebuild node-sass && flow-typed install"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -66,6 +67,7 @@
     "react-hot-loader": "^4.6.3",
     "redux-immutable-state-invariant": "^2.1.0",
     "regenerator-runtime": "^0.13.1",
+    "replace": "^1.0.1",
     "sass-loader": "^7.1.0",
     "swagger-tools": "0.9.7",
     "webpack-dev-server": "2.11.2"
@@ -81,7 +83,9 @@
     "classnames": "^2.2.6",
     "codemirror": "^5.43.0",
     "core-js": "^2.6.3",
-    "jquery": "^3.4.0",
+    "decca": "^2.3.0",
+    "emotion": "^9.1.3",
+    "jquery": "^3.3.1",
     "jquery-ui": "^1.12.1",
     "moment": "^2.24.0",
     "moment-range": "^2.2.0",
@@ -90,9 +94,9 @@
     "numeral": "^2.0.6",
     "pluralize": "^7.0.0",
     "prop-types": "^15.7.2",
-    "react": "^16.8.5",
-    "react-codemirror2": "^5.1.0",
+    "react": "^16.8.3",
     "react-dom": "^16.8.3",
+    "react-codemirror2": "^5.1.0",
     "react-jsonschema-form": "^1.3.0",
     "react-redux": "^5.0.6",
     "react-sortable-hoc": "^1.6.1",
@@ -101,7 +105,6 @@
     "redux-thunk": "^2.3.0",
     "select2": "^4.0.6-rc.1",
     "url-polyfill": "^1.1.3",
-    "virtual-dom": "^2.1.1",
     "whatwg-fetch": "^3.0.0"
   }
 }
