--- a/package.json
+++ b/package.json
@@ -14,18 +14,20 @@
     "jest:watch": "npm run-script jest -- --watch"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.5",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-transform-destructuring": "^7.4.4",
+    "@babel/plugin-transform-runtime": "^7.4.4",
+    "@babel/plugin-transform-template-literals": "^7.4.4",
+    "@babel/polyfill": "^7.4.4",
+    "@babel/preset-env": "^7.4.5",
+    "@babel/preset-flow": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
     "babel-eslint": "^10.0.1",
-    "babel-jest": "^23.6.0",
-    "babel-loader": "^6.4.1",
-    "babel-plugin-react": "^1.0.0",
-    "babel-plugin-transform-es2015-destructuring": "^6.23.0",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
+    "babel-jest": "^24.8.0",
     "css-loader": "^0.28.9",
     "empty": "^0.10.1",
     "enzyme": "^3.3.0",
@@ -59,7 +61,7 @@
     "karma-jasmine-jquery": "^0.1.1",
     "karma-jquery": "^0.2.3",
     "karma-junit-reporter": "^1.1.0",
-    "karma-webpack": "^3.0.5",
+    "karma-webpack": "^4.0.0-rc.6",
     "postcss-loader": "^3.0.0",
     "postcss-smart-import": "^0.7.6",
     "raf": "^3.4.1",
@@ -68,19 +70,20 @@
     "regenerator-runtime": "^0.13.1",
     "sass-loader": "^7.1.0",
     "swagger-tools": "0.9.7",
-    "webpack-dev-server": "2.11.2"
+    "typescript": "^3.5.1",
+    "webpack": "^4.32.2",
+    "webpack-cli": "^3.3.2",
+    "webpack-dev-server": "^3.5.1"
   },
   "dependencies": {
-    "@patternfly/patternfly": "^2.12.4",
-    "@patternfly/react-core": "^3.36.0",
-    "@patternfly/react-icons": "^3.9.3",
-    "@rails/webpacker": "^3.5.5",
+    "@rails/webpacker": "^4.0.0-rc.8",
     "ajv": "^6.9.2",
+    "babel-loader": "^8.0.6",
     "bootstrap-sass": "3",
     "c3": "^0.4.11",
     "classnames": "^2.2.6",
     "codemirror": "^5.43.0",
-    "core-js": "^2.6.3",
+    "core-js": "^2.6.9",
     "jquery": "^3.4.0",
     "jquery-ui": "^1.12.1",
     "moment": "^2.24.0",
