--- a/package.json
+++ b/package.json
@@ -43,9 +43,9 @@
     "eslint-plugin-react": "^7.12.4",
     "eslint-plugin-standard": "^4.0.0",
     "file-loader": "^1.1.6",
-    "flow-bin": "^0.93.0",
-    "flow-typed": "^2.5.1",
-    "hosted-git-info": "https://registry.npmjs.org/hosted-git-info/-/hosted-git-info-2.1.5.tgz",
+    "flow-bin": "^0.100.0",
+    "flow-typed": "^2.5.2",
+    "hosted-git-info": "^2.7.1",
     "jasmine": "^3.2.0",
     "jasmine-core": "^3.3.0",
     "jasmine-jquery": "^2.1.1",
