--- a/config/docker/redis.yml
+++ b/config/docker/redis.yml
@@ -1,14 +1,16 @@
-default: &DEFAULT
-  url: <%= ENV.fetch('REDIS_URL', 'redis://system-redis:6379/1') %>
+base: &base
+  url: "<%= ENV.fetch('REDIS_URL', 'redis://system-redis:6379/1') %>"
   pool_size: <%= ENV.fetch('RAILS_MAX_THREADS', 5) %>
   pool_timeout: 5 # this is in seconds
-  namespace: <%= ENV['REDIS_NAMESPACE'] %>
+  namespace: "<%= ENV['REDIS_NAMESPACE'] %>"
+  sentinels: "<%= ENV['REDIS_SENTINEL_HOSTS'] %>"
+  role: <%= ENV['REDIS_SENTINEL_ROLE'] %>
 
 production:
-  <<: *DEFAULT
+  <<: *base
 
 preview:
-  <<: *DEFAULT
+  <<: *base
 
 development:
-  <<: *DEFAULT
+  <<: *base
