--- a/config/examples/redis.yml
+++ b/config/examples/redis.yml
@@ -1,17 +1,22 @@
----
+base: &base
+  url: "<%= ENV.fetch('REDIS_URL', 'redis://localhost/1') %>"
+  pool_size: <%= ENV.fetch('RAILS_MAX_THREADS', 5) %>
+  pool_timeout: 5 # this is in seconds
+  namespace: "<%= ENV['REDIS_NAMESPACE'] %>"
+  sentinels: "<%= ENV['REDIS_SENTINEL_HOSTS'] %>"
+  role: <%= ENV['REDIS_SENTINEL_ROLE'] %>
+
 production:
-  url: <%= ENV.fetch('REDIS_URL', 'redis://localhost/3') %>
-  pool_size: <%= ENV.fetch('RAILS_MAX_THREADS', 5) %>
-  pool_timeout: 5 # this is in seconds
-  namespace: <%= ENV['REDIS_NAMESPACE'] %>
+  <<: *base
+  url: "<%= ENV.fetch('REDIS_URL', 'redis://localhost/3') %>"
+
+preview:
+  <<: *base
+  url: "<%= ENV.fetch('REDIS_URL', 'redis://localhost/3') %>"
+
 development:
-  url: <%= ENV.fetch('REDIS_URL', 'redis://localhost/1') %>
-  pool_size: <%= ENV.fetch('RAILS_MAX_THREADS', 5) %>
-  pool_timeout: 5 # this is in seconds
-  namespace: <%= ENV['REDIS_NAMESPACE'] %>
+  <<: *base
+
 test:
-  url: <%= ENV.fetch('REDIS_URL', 'redis://localhost/1') %>
+  <<: *base
   db: <%= 2 + ENV['TEST_ENV_NUMBER'].to_i %>
-  pool_size: <%= ENV.fetch('RAILS_MAX_THREADS', 5) %>
-  pool_timeout: 5 # this is in seconds
-  namespace: <%= ENV['REDIS_NAMESPACE'] %>
