--- a/openshift/system/config/backend_redis.yml
+++ b/openshift/system/config/backend_redis.yml
@@ -1,11 +1,13 @@
-bae: &default
+base: &base
+  url: "<%= ENV.fetch('BACKEND_REDIS_URL', 'redis://backend-redis:6379') %>"
   timeout:  1
-  url: <%= ENV.fetch('BACKEND_REDIS_URL', 'redis://backend-redis:6379') %>
-  pool_timeout: 5
   pool_size: <%= ENV.fetch('RAILS_MAX_THREADS', 5) %>
+  pool_timeout: 5 # this is in seconds
+  sentinels: "<%= ENV['BACKEND_REDIS_SENTINEL_HOSTS'] %>"
+  role: <%= ENV['BACKEND_REDIS_SENTINEL_ROLE'] %>
 
 production:
-  <<: *default
+  <<: *base
 
 preview:
-  <<: *default
+  <<: *base
