--- a/openshift/system/config/message_bus.yml
+++ b/openshift/system/config/message_bus.yml
@@ -1,16 +1,15 @@
-base: &default
+base: &base
   enabled: true
   redis:
-    url: <%= ENV['MESSAGE_BUS_REDIS_URL'] %>
+    url: "<%= ENV['MESSAGE_BUS_REDIS_URL'] %>"
     pool_size: <%= ENV.fetch('RAILS_MAX_THREADS', 5) %>
-    pool_timeout: 5
-    namespace: <%= ENV['MESSAGE_BUS_REDIS_NAMESPACE'] %>
+    pool_timeout: 5 # this is in seconds
+    namespace: "<%= ENV['MESSAGE_BUS_REDIS_NAMESPACE'] %>"
+    sentinels: "<%= ENV['MESSAGE_BUS_REDIS_SENTINEL_HOSTS'] %>"
+    role: <%= ENV['MESSAGE_BUS_REDIS_SENTINEL_ROLE'] %>
 
 production:
-  <<: *default
+  <<: *base
 
 preview:
-  <<: *default
-
-development:
-  <<: *default
+  <<: *base
