:rotating_light: ignores PF assets and fixes some issues

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -72,8 +72,10 @@ exclude_paths:
   - "app/assets/javascripts/plans_widget.js"
   - "app/assets/javascripts/provider/plans_widget.js"
   - "app/assets/javascripts/help.js"
+  - "app/assets/stylesheets/provider/_patternfly_ie11.scss"
   - "tmp/**/*"
   - "**/vendor/*"
+  - "app/assets/patternfly"
   - "app/assets/images/**/*"
   - "public/images/**/*"
   - "public/themes/**/*"
