--- a/package.json
+++ b/package.json
@@ -76,6 +76,9 @@
     "webpack-dev-server": "^3.5.1"
   },
   "dependencies": {
+    "@patternfly/patternfly": "^2.12.4",
+    "@patternfly/react-core": "^3.36.0",
+    "@patternfly/react-icons": "^3.9.3",
     "@rails/webpacker": "^4.0.0-rc.8",
     "ajv": "^6.9.2",
     "babel-loader": "^8.0.6",
