Does not send request to segment if disabled
[THREESCALE-2572]
3scale on-prem tries to send requests to segment.io and fails when it
is not reachable. This commit creates a section to toggle segment at
features.yml and it avoids sending requests to segment.io if it is
disabled.

--- a/config/examples/features.yml
+++ b/config/examples/features.yml
@@ -6,6 +6,8 @@ features: &default
     contract_unpaid_time: 183
     disabled_for_app_plans:
     - '%enterprise%'
+  segment:
+    enabled: true
   segment_deletion:
     enabled: false
     email: 'email@example.com'
