--- a/config/examples/cache_store.yml
+++ b/config/examples/cache_store.yml
@@ -1,6 +1,6 @@
 development:
   - :dalli_store
-  - localhost:11211
+  - <%= ENV.fetch('MEMCACHE_SERVERS', 'localhost:11211') %>
 
 test:
   - :null_store
