Self managed policies registry url
Closes THREESCALE-2698

--- a/config/docker/sandbox_proxy.yml
+++ b/config/docker/sandbox_proxy.yml
@@ -6,7 +6,6 @@ base: &default
   backend_scheme: <%= ENV.fetch('THREESCALE_SANDBOX_PROXY_BACKEND_SCHEME', 'https') %>
   shared_secret: <%= ENV.fetch('THREESCALE_SANDBOX_PROXY_SHARED_SECRET', '') %>
   nginx_port:  <%= ENV.fetch('THREESCALE_SANDBOX_PROXY_NGINX_PORT', 8081).to_i %>
-  verify_mode: <%= ENV.fetch('THREESCALE_SANDBOX_PROXY_OPENSSL_VERIFY_MODE', OpenSSL::SSL::VERIFY_NONE).to_i %>
   override: <%= ENV.fetch('THREESCALE_SANDBOX_PROXY_OVERRIDE', nil) %>
   debug: <%= ENV.fetch('THREESCALE_SANDBOX_PROXY_DEBUG', '0') == '1' %>
   sandbox_endpoint: 'https://%{system_name}-%{account_id}-<%= ENV.fetch('TENANT_NAME', 'provider') %>-staging.<%=ENV.fetch('THREESCALE_SUPERDOMAIN', '3scale.net')%>:%{port}'
@@ -16,6 +15,7 @@ base: &default
   verify_mode: <%= OpenSSL::SSL.const_get(ENV.fetch('THREESCALE_SANDBOX_PROXY_OPENSSL_VERIFY_MODE', 'VERIFY_NONE')) %>
   skip_deploy: true
   apicast_registry_url: <%= ENV.fetch('APICAST_REGISTRY_URL', 'http://apicast-staging:8090/policies') %>
+  self_managed_apicast_registry_url: <%= ENV.fetch('APICAST_REGISTRY_URL', 'http://apicast-staging:8090/policies') %>
 
 development:
   <<: *default
