--- a/config/examples/sandbox_proxy.yml
+++ b/config/examples/sandbox_proxy.yml
@@ -18,6 +18,7 @@ base: &default
   apicast_production_endpoint: 'http://%{system_name}-%{account_id}.%{env}apicast.dev:8080'
   skip_deploy: false
   apicast_registry_url: <%= ENV['APICAST_REGISTRY_URL'] %>
+  self_managed_apicast_registry_url: <%= ENV['APICAST_REGISTRY_URL'] %>
 
 development:
   <<: *default
