--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,44 +1,96 @@
-version: '2.1'
+# version: '2.1'
+# services:
+#   keycloak:
+#     image: jboss/keycloak:3.0.0.Final
+#     environment:
+#       KEYCLOAK_USER: keycloak
+#       KEYCLOAK_PASSWORD: development
+#       KEYCLOAK_LOGLEVEL: DEBUG
+#     ports:
+#       - "8080"
+#       - "9990"
+#   backend:
+#     image: quay.io/3scale/amp:backend-2.1.0-ER1
+#     environment:
+#       RACK_ENV: preview
+#       CONFIG_REDIS_PROXY: redis:6379
+#       CONFIG_QUEUES_MASTER_NAME: redis:6379
+#       CONFIG_WORKERS_LOG_FILE: /dev/stdout
+#   backend-listener:
+#     extends: backend
+#     command: rackup --host 0.0.0.0 --port 3000
+#     container_name: backend
+#     ports:
+#       - "3001:3000"
+#     depends_on:
+#       - redis
+#       - backend-worker
+#   backend-worker:
+#     extends: backend
+#     command: 3scale_backend_worker run
+#     depends_on:
+#       - redis
+#   redis:
+#     image: redis:3.2.5-alpine
+#     container_name: redis
+#     ports:
+#       - "6379:6379"
+#   apicast:
+#     image: quay.io/3scale/apicast:3.3-stable
+#     env_file: .env.apicast
+#     depends_on:
+#       - backend-listener
+#     ports:
+#       - "8091:8080"
+
+version: '3'
 services:
-  keycloak:
-    image: jboss/keycloak:3.0.0.Final
-    environment:
-      KEYCLOAK_USER: keycloak
-      KEYCLOAK_PASSWORD: development
-      KEYCLOAK_LOGLEVEL: DEBUG
+  system:
+    build: .
+    command: bash -c "UNICORN_WORKERS=2 bin/rails server -b 0.0.0.0"
     ports:
-      - "8080"
-      - "9990"
-  backend:
-    image: quay.io/3scale/amp:backend-2.1.0-ER1
-    environment:
-      RACK_ENV: preview
-      CONFIG_REDIS_PROXY: redis:6379
-      CONFIG_QUEUES_MASTER_NAME: redis:6379
-      CONFIG_WORKERS_LOG_FILE: /dev/stdout
-  backend-listener:
-    extends: backend
-    command: rackup --host 0.0.0.0 --port 3000
-    container_name: backend
+      - "3000:3000"
+  mysql:
+    image: mysql:5.7
+    container_name: mysql
     ports:
-      - "3001:3000"
-    depends_on:
-      - redis
-      - backend-worker
-  backend-worker:
-    extends: backend
-    command: 3scale_backend_worker run
-    depends_on:
-      - redis
+      - "3306:3306"
+    environment:
+      - MYSQL_ALLOW_EMPTY_PASSWORD=true
+    volumes:
+      - mysql-data:/var/lib/mysql
+
+  memcached:
+    image: memcached
+    container_name: memcached
+    ports:
+      - "11211:11211"
+
+  apisonator:
+    image: quay.io/3scale/apisonator:latest
+    container_name: apisonator
+    ports:
+      - "3001:3001"
+    command: "3scale_backend_start -p 3001"
+
   redis:
-    image: redis:3.2.5-alpine
+    image: redis
     container_name: redis
     ports:
       - "6379:6379"
-  apicast:
-    image: quay.io/3scale/apicast:3.3-stable
-    env_file: .env.apicast
-    depends_on:
-      - backend-listener
+
+  backend_redis:
+    image: redis
+    container_name: backend_redis
     ports:
-      - "8091:8080"
+      - "6380:6379"
+
+  mailhog:
+    image: mailhog/mailhog
+    container_name: mailhog
+    ports:
+      - "1025:1025"
+      - "8025:8025"
+
+volumes:
+  mysql-data:
