--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
     "@patternfly/patternfly": "^2.12.4",
     "@patternfly/react-core": "^3.36.0",
     "@patternfly/react-icons": "^3.9.3",
-    "@rails/webpacker": "^4.0.0-rc.8",
+    "@rails/webpacker": "^4.0.7",
     "ajv": "^6.9.2",
     "babel-loader": "^8.0.6",
     "bootstrap-sass": "3",
