--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "webpack-dev-server": "^3.5.1"
   },
   "dependencies": {
+    "@babel/runtime": "^7.4.5",
     "@patternfly/patternfly": "^2.12.4",
     "@patternfly/react-core": "^3.36.0",
     "@patternfly/react-icons": "^3.9.3",
