--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "eslint-plugin-standard": "^4.0.0",
     "file-loader": "^1.1.6",
     "flow-bin": "^0.100.0",
-    "flow-typed": "^2.5.2",
+    "flow-typed": "=2.5.1",
     "hosted-git-info": "^2.7.1",
     "jasmine": "^3.2.0",
     "jasmine-core": "^3.3.0",
