--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -10,8 +10,9 @@ default: &default
   # ['app/assets', 'engine/foo/app/assets']
   resolved_paths: ['app/javascript/src']
 
-  # Reload manifest.json on all requests so we reload latest compiled packs
+  # Reload manifest.json on all requests so we reload latest compiled packs
   cache_manifest: false
+  webpack_compile_output: true
 
   extensions:
     - .coffee
