--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "node-sass": "^4.9.4",
     "numeral": "^2.0.6",
     "pluralize": "^7.0.0",
+    "pristinejs": "^0.1.6",
     "prop-types": "^15.7.2",
     "react": "^16.8.5",
     "react-codemirror2": "^5.1.0",
