[npm] Check and/or update dependencies
* check if dependencies are installed correctly
* If not, remove possible stale ones and install a new bundle silently

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -478,7 +478,7 @@ jobs:
           name: Install NPM dependencies
           command: |
             npm --version
-            npm install
+            npm run check-dependencies
       - *save-npm-cache
       - persist_to_workspace:
           root: .
