--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "Apache-2.0",
   "scripts": {
     "clean": "rm -rf node_modules/ && npm cache clean --force",
-    "update-lock": "npm run clean && npm i --no-progress",
+    "update-dependencies": "npm run clean && npm i --no-progress",
+    "check-dependencies": "npm ls --depth=0 || npm run update-dependencies",
     "flow:install": "flow-typed install",
     "lint": "flow && eslint .eslintrc app/javascript spec/javascripts",
     "test": "karma start --single-run",
