--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,8 +33,8 @@ services:
       - apisonator
       - mailhog
       - memcached
-      - mysql
       - redis
+      - mysql
     volumes:
       - ./node_modules:/opt/system/node_modules
     ports:
@@ -67,6 +67,10 @@ services:
       - "3306:3306"
     environment:
       - MYSQL_ALLOW_EMPTY_PASSWORD=true
+    healthcheck:
+        test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost"]
+        timeout: 20s
+        retries: 10
     volumes:
       - mysql-data:/var/lib/mysql
 
