--- a/config/examples/rolling_updates.yml
+++ b/config/examples/rolling_updates.yml
@@ -17,6 +17,7 @@ base: &default
   proxy_private_base_path: true
   service_mesh_integration: false
   api_as_product: false
+  independent_mapping_rules: false
 
 development:
   <<: *default
