--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-flow": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
+    "@metahub/karma-jasmine-jquery": "^2.0.1",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.8.0",
     "css-loader": "^0.28.9",
@@ -48,18 +49,17 @@
     "flow-typed": "^2.5.2",
     "hosted-git-info": "^2.7.1",
     "jasmine": "^3.2.0",
-    "jasmine-core": "^3.3.0",
+    "jasmine-core": "^3.4.0",
     "jasmine-jquery": "^2.1.1",
     "jest": "^24.8.0",
     "jest-transform-stub": "^2.0.0",
     "jsdom": "^13.2.0",
-    "karma": "^4.0.0",
+    "karma": "^4.2.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-cli": "^2.0.0",
     "karma-firefox-launcher": "^1.1.0",
     "karma-fixture": "^0.2.6",
     "karma-jasmine": "^2.0.1",
-    "karma-jasmine-jquery": "^0.1.1",
     "karma-jquery": "^0.2.3",
     "karma-junit-reporter": "^1.1.0",
     "karma-webpack": "^4.0.0-rc.6",
