--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "regenerator-runtime": "^0.13.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
-    "swagger-tools": "0.9.7",
+    "swagger-tools": "^0.10.4",
     "typescript": "^3.5.1",
     "webpack": "^4.32.2",
     "webpack-cli": "^3.3.2",
