--- a/package.json
+++ b/package.json
@@ -103,7 +103,7 @@
     "react": "^16.8.5",
     "react-codemirror2": "^5.1.0",
     "react-dom": "^16.8.3",
-    "react-jsonschema-form": "^1.3.0",
+    "react-jsonschema-form": "1.3.0",
     "react-redux": "^5.0.6",
     "react-sortable-hoc": "^1.6.1",
     "redux": "^4.0.1",
