--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -49,6 +49,9 @@ Style/TrailingCommaInHashLiteral:
 Style/TrailingCommaInArrayLiteral:
   Enabled: false
 
+Style/Lambda:
+  EnforcedStyle: literal
+
 Metrics/LineLength:
   Max: 99
   Enabled: false
