[Rolling Updates] Plugin deployment option are deprecated
We want to deprecate Plugins
This is the first step to do it, on-prem they should not be shown anymore

We still need to think of what to do with customers that use it.
My suggestion is not to have a migration path, either they use APIcast (V2) or nothing

--- a/openshift/system/config/rolling_updates.yml
+++ b/openshift/system/config/rolling_updates.yml
@@ -21,6 +21,7 @@ base: &default
   proxy_private_base_path: true
   service_mesh_integration: true
   api_as_product: true
+  plugin_deployment_option: false
 
 production:
   <<: *default
