--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "empty": "^0.10.1",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.10.0",
+    "enzyme-to-json": "^3.4.2",
     "eslint": "^6.0.1",
     "eslint-config-standard": "^7.1.0",
     "eslint-loader": "^2.1.1",
