--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -73,7 +73,7 @@ attach-to-workspace: &attach-to-workspace
     at: .
 
 system-builder-ruby24: &system-builder-ruby24
-  image: quay.io/3scale/system-builder:latest
+  image: quay.io/3scale/system-builder:ruby24
   environment:
     BUNDLE_FROZEN: true
     BUNDLE_PATH: 'vendor/bundle'
