--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@metahub/karma-jasmine-jquery": "^2.0.1",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.8.0",
+    "canvas": "^2.5.0",
     "css-loader": "^2.1.1",
     "empty": "^0.10.1",
     "enzyme": "^3.3.0",
@@ -54,7 +55,7 @@
     "jasmine-jquery": "^2.1.1",
     "jest": "^24.9.0",
     "jest-transform-stub": "^2.0.0",
-    "jsdom": "^13.2.0",
+    "jsdom": "^15.1.0",
     "karma": "^4.2.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-cli": "^2.0.0",
