AWS S3 hostname and protocol config options

--- a/config/docker/amazon_s3.yml
+++ b/config/docker/amazon_s3.yml
@@ -3,6 +3,8 @@ default: &DEFAULT
   secret_access_key: "<%= ENV['AWS_SECRET_ACCESS_KEY'] %>"
   bucket:            "<%= ENV['AWS_BUCKET'] %>"
   region:            "<%= ENV['AWS_REGION'] %>"
+  hostname:          "<%= ENV['AWS_HOSTNAME'] %>"
+  protocol:          "<%= ENV['AWS_PROTOCOL'] %>"
 
 production:
  <<: *DEFAULT
