--- a/openshift/system/config/amazon_s3.yml
+++ b/openshift/system/config/amazon_s3.yml
@@ -6,6 +6,8 @@ s3: &s3
   secret_access_key: "<%= ENV['AWS_SECRET_ACCESS_KEY'] %>"
   bucket:            "<%= ENV['AWS_BUCKET'] %>"
   region:            "<%= ENV['AWS_REGION'] %>"
+  hostname:          "<%= ENV['AWS_HOSTNAME'] %>"
+  protocol:          "<%= ENV['AWS_PROTOCOL'] %>"
 
 preview:
   <<: *<%= ENV['FILE_UPLOAD_STORAGE'].presence || 'default' %>
