Do not set RAILS_ENV in the Dockerfile
Set it where needed instead .circleci/config.yml instead
Makes more community friendly, otherwise everything is running as test if not unset

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -84,6 +84,7 @@ system-builder-ruby25: &system-builder-ruby25
     MASTER_PASSWORD: p
     USER_PASSWORD: p
     LC_ALL: en_US.UTF-8
+    RAILS_ENV: test
 
 mysql-container: &mysql-container
   image: circleci/mysql:5.7-ram
