--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "redux-api-middleware": "^3.0.1",
     "redux-thunk": "^2.3.0",
     "select2": "^4.0.6-rc.1",
+    "swagger-ui-react": "^3.25.0",
     "url-polyfill": "^1.1.3",
     "validate.js": "^0.13.1",
     "virtual-dom": "^2.1.1",
