--- a/config/docker/amazon_s3.yml
+++ b/config/docker/amazon_s3.yml
@@ -5,6 +5,7 @@ default: &DEFAULT
   region:            "<%= ENV['AWS_REGION'] %>"
   hostname:          "<%= ENV['AWS_HOSTNAME'] %>"
   protocol:          "<%= ENV['AWS_PROTOCOL'] %>"
+  force_path_style:  <%= ENV['AWS_PATH_STYLE'].presence || false %>
 
 production:
  <<: *DEFAULT
