--- a/openshift/system/config/amazon_s3.yml
+++ b/openshift/system/config/amazon_s3.yml
@@ -8,6 +8,7 @@ s3: &s3
   region:            "<%= ENV['AWS_REGION'] %>"
   hostname:          "<%= ENV['AWS_HOSTNAME'] %>"
   protocol:          "<%= ENV['AWS_PROTOCOL'] %>"
+  force_path_style:  <%= ENV['AWS_PATH_STYLE'].presence || false %>
 
 preview:
   <<: *<%= ENV['FILE_UPLOAD_STORAGE'].presence || 'default' %>
