--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -43,6 +43,7 @@ development:
 test:
   <<: *default
   compile: false
+  webpack_compile_output: true
 
   # Compile test packs to a separate directory
   public_output_path: packs-test
