[circle] Not running webpack compile on assets:precompile task

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -439,8 +439,7 @@ jobs:
           name: Precompile assets
           command: |
             cp config/examples/*.yml config/
-            bundle exec rake assets:precompile RAILS_ENV=test
-            bundle exec rake assets:precompile RAILS_ENV=production
+            bundle exec rake assets:precompile RAILS_ENV=test WEBPACKER_PRECOMPILE=false
             bundle exec rake webpack:compile NODE_ENV=test RAILS_ENV=test
           environment:
             RAILS_GROUPS: assets
