--- a/.flowconfig
+++ b/.flowconfig
@@ -13,6 +13,6 @@
 
 [options]
 module.system.node.resolve_dirname=node_modules
-module.name_mapper.extension='scss' -> 'empty/object'
+module.name_mapper='.*\(.s?css\)' -> 'empty/object'
 module.system=haste
 module.name_mapper='\(ActiveDocs\|Applications\|Form\|Settings\|Dashboard\|LoginPage\|Navigation\|Onboarding\|Policies\|services\|Stats\|Types\|Users\|utilities\|NewService\)\(.*\)$' -> '<PROJECT_ROOT>/app/javascript/src/\1/\2'
