[docker-compose] wait for database to be ready before doing migration
Wait for a reasonably long time
So that we do not end up with mysql started but not ready to receive connection

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,7 +58,7 @@ services:
     environment:
       - MYSQL_ALLOW_EMPTY_PASSWORD=true
     healthcheck:
-        test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost"]
+        test: "mysql --user=root --execute 'SHOW DATABASES;'"
         timeout: 20s
         retries: 10
     volumes:
